sters elementele din designul vechi

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,62 +1,23 @@
-html,
-body {
-  height: 100%;
-  width: 100%;
-  font-family: 'Segoe UI', 'Poppins', sans-serif;
-  background: #fff;
-  color: #666666;
+html * {
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
-
+body {
+	background-color: #E5E5E5;
+	color: #3C4858;
+}
+body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+	font-weight: 300;
+	line-height: 1.5em;
+}
 a {
   color: #5fcf80;
 }
-
-a:hover,
-a:active,
-a:focus {
+a:hover {
   color: #5fcf80;
-  outline: none;
   text-decoration: none;
 }
-
-p {
-  padding: 0;
-  margin: 1 0 30px 0;
-}
-
-/*h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Segoe UI', sans-serif;
-  font-weight: 400;
-  margin: 0 0 20px 0;
-  padding: 0;
-}*/
-
-.btn-primary {
-  color: #6c757d;
-  background-color: transparent;
-  border-color: #6c757d;
-}
-
-.btn-outline-secondary {
-  color: #6c757d;
-  background-color: transparent;
-  background-image: none;
-  border-color: #6c757d;
-}
-
-.img-fluid {
-  max-width: 100%;
-  height: auto;
-  border-radius: 8px;
-}
-
-/* --- Navigation --> */
-
 .navbar {
   position: fixed;
   top: 0;
@@ -68,16 +29,14 @@ h6 {
   z-index: 9999;
 }
 .bg-dark {
-  background-color: rgba(14, 14, 14, 0.9) !important;
+  background-color: rgba(52, 58, 64, .9) !important;
 }
-
 .navbar-toggler {
   padding: 0.25rem 0.75rem;
   border-radius: 4px;
   background: transparent;
   border: none;
 }
-
 .navbar-toggler .icon-bar {
   display: block;
   width: 22px;
@@ -88,7 +47,6 @@ h6 {
   -o-transition: all 0.2s;
   transition: all 0.2s;
 }
-
 .navbar-toggler .top-bar {
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
@@ -97,13 +55,11 @@ h6 {
   -ms-transform-origin: 10% 10%;
   transform-origin: 10% 10%;
 }
-
 .navbar-toggler .middle-bar {
   margin-top: 4px;
   opacity: 0;
   margin-bottom: 4px;
 }
-
 .navbar-toggler .bottom-bar {
   -webkit-transform: rotate(-45deg);
   -ms-transform: rotate(-45deg);
@@ -118,493 +74,31 @@ h6 {
   -ms-transform: rotate(0);
   transform: rotate(0);
 }
-
 .navbar-toggler.collapsed .middle-bar {
   opacity: 1;
 }
-
 .navbar-toggler.collapsed .bottom-bar {
   -webkit-transform: rotate(0);
   -ms-transform: rotate(0);
   transform: rotate(0);
 }
-
 .navbar-nav .dropdown-menu {
   position: absolute;
 }
-
 .navbar-dark .navbar-nav .nav-link {
   color: rgba(255, 255, 255, .9);
   font-weight: 700;
 }
-
 .navbar-brand {
   margin: -5px;
   padding: 0;
   transition: opacity .5s;
 }
-
 .navbar-brand img {
   height: 40px;
 }
-
-button:focus,
-button:active {
+button:focus, button:active {
   outline: none !important;
-}
-
-
-/* --- Jumbotron --> */
-
-.jumbotron {
-  padding: 1rem;
-  border-radius: 0;
-}
-
-.padding {
-  padding-bottom: 2rem;
-}
-
-.welcome {
-  width: 75%;
-  margin: 0 auto;
-  padding-top: 2rem;
-}
-
-.welcome hr {
-  border-top: 2px solid #5fcf80;
-  width: 95%;
-  margin-top: .3rem;
-  margin-bottom: 1rem;
-}
-
-/*.fa-allergies,
-.fa-globe,
-.fa-money-bill-alt,
-.fa-user-md,
-.fa-heart {
-  color: #5fcf80;
-  font-size: 8em;
-  padding-bottom: 2rem;
-  margin: 1rem;
-}*/
-
-/* --- Social Media Links --> */
-
-.social a {
-  font-size: 4.5em;
-  padding: 3rem;
-}
-
-.fa-facebook {
-  color: #3b5998;
-}
-
-.fa-twitter {
-  color: #00aced;
-}
-
-.fa-google-plus-g {
-  color: #dd4b39;
-}
-
-.fa-youtube {
-  color: #bb0000;
-}
-
-.fa-facebook:hover,
-.fa-twitter:hover,
-.fa-google-plus-g:hover,
-.fa-youtube:hover {
-  color: #5fcf80;
-}
-
-/* --- Contact Us --> */
-
-#contact {
-  background: #f7f7f7;
-  padding: 80px 0 40px 0;
-}
-
-#contact .info p {
-  padding: 0 0 10px 30px;
-  margin-bottom: 20px;
-  line-height: 22px;
-  font-size: 14px;
-  display: inline-block;
-}
-
-#contact .form #sendmessage {
-  color: #5fcf80;
-  border: 1px solid #5fcf80;
-  display: none;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-  margin-bottom: 15px;
-}
-
-#contact .form #errormessage {
-  color: red;
-  display: none;
-  border: 1px solid red;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-  margin-bottom: 15px;
-}
-
-#contact .form #sendmessage.show,
-#contact .form #errormessage.show,
-#contact .form .show {
-  display: block;
-}
-
-#contact .form .validation {
-  color: red;
-  display: none;
-  margin: 0 0 20px;
-  font-weight: 400;
-  font-size: 13px;
-}
-
-#contact .form button[type="submit"] {
-  font-family: "Segoe UI", sans-serif;
-  text-transform: uppercase;
-  font-weight: 500;
-  font-size: 16px;
-  letter-spacing: 1px;
-  display: inline-block;
-  padding: 8px 28px;
-  border-radius: 50px;
-  transition: 0.5s;
-  margin: 10px;
-  color: #fff;
-  background: #5fcf80;
-  border: 2px solid #fff;
-}
-
-#contact .fa-map-marker,
-.fa-envelope,
-.fa-phone {
-  font-size: 2em;
-  color: #5fcf80;
-}
-
-/*---Footer -->*/
-
-#footer {
-  background: #485859;
-  padding: 30px 0;
-  color: #fff;
-  font-size: 14px;
-}
-
-#footer .copyright {
-  text-align: center;
-}
-
-#footer .credits {
-  padding-top: 10px;
-  text-align: center;
-  font-size: 13px;
-  color: #ccc;
-}
-
-/*---Media Queries -->*/
-
-@media (min-width: 992px) {
-  #login-button {
-	text-transform: uppercase;
-	font-weight: 700;
-	padding: 0.3rem 1rem;
-	border-radius: 50px;
-	transition: 0.3s;
-	border: 2px solid #5fcf80;
-	color: #fff;
-  }
-  #login-button:hover {
-	background-color: #5fcf80;
-  }
-  .navbar-nav li {
-	margin-left: 20px;
-  }
-}
-
-@media (max-width: 991px) {
-  .navbar-expand-lg>.container, .navbar-expand-lg>.container-fluid {
-	padding-right: 15px;
-	padding-left: 15px;
-  }
-  .navbar-brand {
-	margin: 0;
-	padding-left: 0.75rem;
-  }
-  .navbar-nav {
-	margin-top: .5rem;
-  }
-  .social a {
-	font-size: 4em;
-	padding: 2rem;
-  }
-}
-
-@media (max-width: 768px) {
-  #header #logo img {
-	max-height: 40px;
-  }
-  #nav-menu-container {
-	display: none;
-  }
-  #carousel h1 {
-	font-size: 28px;
-	line-height: 36px;
-  }
-  #carousel h2 {
-	font-size: 18px;
-	line-height: 24px;
-	margin-bottom: 30px;
-  }
-  .carousel-caption {
-	top: 45%;
-  }
-  .carousel-caption h1 {
-	font-size: 350%;
-  }
-  .carousel-caption h3 {
-	font-size: 140%;
-	font-weight: 400;
-	padding-bottom: .2rem;
-  }
-  .carousel-caption .btn {
-	font-size: 95%;
-	padding: 8px 14px;
-  }
-  .display-4 {
-	font-size: 200%;
-  }
-  .social a {
-	font-size: 2.5em;
-	padding: 1.2rem;
-  }
-  .sandwich {
-	display: inline-block;
-  }
-}
-
-@media (max-width: 576px) {
-  .carousel-caption {
-	top: 40%;
-  }
-  .carousel-caption h1 {
-	font-size: 250%;
-  }
-  .carousel-caption h3 {
-	font-size: 110%;
-  }
-  .carousel-caption .btn {
-	font-size: 90%;
-	padding: 4px 8px;
-  }
-  .carousel-indicators {
-	display: none;
-  }
-  .display-4 {
-	font-size: 160%;
-  }
-  .social a {
-	font-size: 2em;
-	padding: .7rem;
-  }
-}
-
-/*--About--> */
-
-#header-about {
-  background: rgba(52, 59, 64, 0.9);
-  padding: 20px 0;
-  height: 72px;
-  transition: all 0.5s;
-}
-
-/*.title {
-  text-align: left;
-}*/
-
-.about {
-  text-align: center;
-}
-
-.nav-menu {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.nav-menu ul {
-  position: absolute;
-  display: none;
-  top: 100%;
-  left: 0;
-  z-index: 99;
-}
-
-.nav-menu li {
-  float: left;
-  position: relative;
-  white-space: nowrap;
-}
-
-.nav-menu ul {
-  top: 0;
-  left: 100%;
-}
-
-#nav-menu-container {
-  float: right;
-  margin: 0;
-}
-
-.nav-menu a {
-  padding: 0 8px 10px 8px;
-  text-decoration: none;
-  display: inline-block;
-  color: #fff;
-  font-family: "Segoe UI", sans-serif;
-  font-weight: 300;
-  text-transform: uppercase;
-  font-size: 15px;
-  outline: none;
-}
-
-.nav-menu>li {
-  margin-left: 20px;
-}
-
-.nav-menu>li>a:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: #5fcf80;
-  visibility: hidden;
-  -webkit-transform: scaleX(0);
-  transform: scaleX(0);
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  transition: all 0.3s ease-in-out 0s;
-}
-
-.nav-menu a:hover:before,
-.nav-menu li:hover>a:before,
-.nav-menu .menu-active>a:before {
-  visibility: visible;
-  -webkit-transform: scaleX(1);
-  transform: scaleX(1);
-}
-
-.aboutHeader {
-  background-color: #484e53;
-}
-
-.section-header .section-title {
-  font-size: 32px;
-  color: #111;
-  text-transform: uppercase;
-  text-align: center;
-  font-weight: 700;
-  margin-bottom: 35px;
-}
-
-#team .member .pic img {
-  max-width: 65%;
-  border-radius: 50%;
-}
-
-img {
-  vertical-align: middle;
-  border-style: none;
-}
-
-#team .member {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-/*h4 {
-  font-family: 'Poppins', sans-serif;
-  font-weight: 300;
-  font-size: 20px;
-  margin: 18px 0 20px 0;
-  padding: 0;
-}*/
-
-.aboutsocial a {
-  display: inline-block;
-  width: 25px;
-}
-
-.social a i.ion-social-facebook {
-  width: 24px;
-}
-
-.icon {
-  color: #666666;
-}
-
-#margin {
-  margin-top: 120px;
-}
-
-i.ion-social-facebook {
-  font-size: 35px;
-}
-
-i.ion-social-instagram {
-  font-size: 35px;
-}
-
-/*about*/
-
-/*
-Extra small (xs) devices (portrait phones, less than 576px)
-No media query since this is the default in Bootstrap
-
-Small (sm) devices (landscape phones, 576px and up)
-@media (min-width: 576px) { ... }
-
-Medium (md) devices (tablets, 768px and up)
-@media (min-width: 768px) { ... }
-
-Large (lg) devices (desktops, 992px and up)
-@media (min-width: 992px) { ... }
-
-Extra (xl) large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) { ... }
-*/
-
-/* =========================================================
- * AllergyHelp
- * =========================================================
- *
- * Landing Page
- * - intervențiile lui Tode -
- *
- * ========================================================= */
-
-html * {
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
-body {
-	background-color: #E5E5E5;
-	color: #3C4858;
-}
-body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-	font-weight: 300;
-	line-height: 1.5em;
 }
 .page-header {
 	background: url(../img/yellow.jpg);
@@ -631,7 +125,7 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 	border: 2px solid #5fcf80;
 }
 .page-header-filter::before {
-	background: rgba(0, 0, 0, 0.5);
+	background: rgba(0, 0, 0, 0.75);
 }
 .page-header-filter:before, .page-header-filter:after {
 	position: absolute;
@@ -694,11 +188,9 @@ h2.title {
 	background: #fff;
 	position: relative;
 	z-index: 3;
-	/*
-	margin: -60px 30px 0px;
+	margin: 0px 30px 0px;
 	border-radius: 6px;
 	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
-	*/
 }
 .section {
 	padding: 70px 0;
@@ -706,12 +198,18 @@ h2.title {
 .section:nth-of-type(even) {
 	background: #f2f2f2;
 }
-.section, .section-image {
-	background-position: 50%;
-	background-size: cover;
+.section:first-child {
+  border-radius: 6px 6px 0 0;
+}
+.section:last-child {
+  border-radius: 0 0 6px 6px;
 }
 .section-image {
-	position: relative;
+  position: relative;
+  color: #fff !important;
+	background-position: 50%;
+  background-size: cover;
+  background-attachment: fixed;
 }
 .info {
 	max-width: 360px;
@@ -782,4 +280,49 @@ h2.title {
 	font-weight: 700;
 	margin: 1.5rem 0 .625rem 0;
 }
-/* ========================================================= */
+b, strong {
+  font-weight: 700;
+}
+.tip {
+  background: rgba(95, 207, 128, .15);
+  padding: 20px 15px;
+  line-height: 20px;
+}
+@media (min-width: 992px) {
+  #login-button {
+    text-transform: uppercase;
+    font-weight: 700;
+    padding: 0.3rem 1rem;
+    border-radius: 50px;
+    transition: 0.3s;
+    border: 2px solid #5fcf80;
+    color: #fff;
+  }
+  #login-button:hover {
+	  background-color: #5fcf80;
+  }
+  .navbar-nav li {
+	  margin-left: 20px;
+  }
+}
+@media screen and (max-width: 991px) {
+  h1, .h1 {
+    font-size: 2.25rem;
+  }
+  .main {
+    margin: 0;
+    border-radius: 0;
+    box-shadow: none;
+  }
+  .navbar-expand-lg>.container, .navbar-expand-lg>.container-fluid {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .navbar-brand {
+    margin: 0;
+    padding-left: 0.75rem;
+  }
+  .navbar-nav {
+    margin-top: .5rem;
+  }
+}
