--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,6 +304,65 @@ b, strong {
   padding: 20px 15px;
   line-height: 20px;
 }
+#echipa .description {
+	margin-bottom: 80px;
+}
+.card-profile {
+	margin-top: 30px;
+	text-align: center;
+}
+.card .card-header {
+	border-radius: 3px;
+	padding: 1rem 15px;
+	margin-left: 15px;
+	margin-right: 15px;
+	margin-top: -30px;
+	border: 0;
+	background: linear-gradient(60deg,#eee,#bdbdbd);
+}
+.card-profile .card-avatar {
+	max-width: 130px;
+	max-height: 130px;
+	margin: -50px auto 0;
+	border-radius: 50%;
+	overflow: hidden;
+	padding: 0;
+	box-shadow: 0 16px 38px -12px rgba(0,0,0,.56), 0 4px 25px 0 rgba(0,0,0,.12), 0 8px 10px -5px rgba(0,0,0,.2);
+}
+.card-profile .card-avatar img {
+	width: 100%;
+	height: auto;
+}
+.card-profile .card-title {
+	margin: 0;
+}
+.card-profile .card-footer a {
+	font-size: 20px;
+	padding: 12px;
+	line-height: 1em;
+}
+.card-profile .card-body {
+	padding-bottom: 0.5rem;
+}
+.card .card-body+.card-footer {
+	padding-top: 0;
+	border: 0;
+	border-radius: 6px;
+}
+.card-plain .card-footer {
+	padding-left: 5px;
+	padding-right: 5px;
+	background-color: transparent;
+}
+.fa-facebook-square {
+	color: #3b5998;
+}
+.fa-instagram {
+	color: #dd4084;
+}
+.fa-github {
+	color: #24292e;
+}
 @media (min-width: 992px) {
   #login-button {
     text-transform: uppercase;
