sters about.html, fixuri slideshow statistici

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,6 +363,28 @@ b, strong {
 .fa-github {
 	color: #24292e;
 }
+.carousel-fade .carousel-item {
+	opacity: 0;
+	transition-duration: .25s;
+	transition-property: opacity;
+}
+.carousel-fade .carousel-item.active,
+.carousel-fade .carousel-item-next.carousel-item-left,
+.carousel-fade .carousel-item-prev.carousel-item-right {
+	opacity: 1;
+}
+.carousel-fade .active.carousel-item-left,
+.carousel-fade .active.carousel-item-right {
+	opacity: 0;
+}
+.carousel-fade .carousel-item-next,
+.carousel-fade .carousel-item-prev,
+.carousel-fade .carousel-item.active,
+.carousel-fade .active.carousel-item-left,
+.carousel-fade .active.carousel-item-prev {
+	transform: translateX(0);
+	transform: translate3d(0, 0, 0);
+}
 @media (min-width: 992px) {
   #login-button {
     text-transform: uppercase;
