--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -37,6 +37,10 @@
 	max-width: 200px;
 	width: 100%;
 }
+.login .brand-subtitle {
+	font-weight: 700;
+	color: rgba(255, 255, 255, .6);
+}
 .login input {
 	max-width: 300px;
 	width: 100%;
@@ -51,7 +55,7 @@
  	color: 1px solid rgba(0, 0, 0, .1);
 }
 .login #login-form input[type="text"] {
-	margin-top: 25px;
+	margin-top: 5px;
 	margin-bottom: -1px;
 	border-radius: 10px 10px 0 0;
 }
@@ -65,11 +69,9 @@
 	cursor: pointer;
 	font-weight: 700;
 	border-radius: 0 0 10px 10px;
-	margin-bottom: 15px;
+	margin-bottom: 5px;
 }
 .login .wrong {
-	margin-top: 5px;
-	margin-bottom: -15px;
 	font-weight: 700;
 	color: #ff3145;
 }
