--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -306,7 +306,7 @@ a.btn {
 	background-color: var(--ah-green);
 	border-color: var(--ah-green);
 }
-button:focus, button:active {
+button:focus, button:active, a:focus, a:active {
     outline: none !important;
     box-shadow: none !important;
 }
@@ -424,6 +424,7 @@ label[for="load-photo"] {
 	max-height: 300px;
 	overflow-y: auto;
 	display: block;
+	line-height: 1.3;
 }
 .allergy-info .list-group-item {
 	padding: .5rem 1rem;
@@ -434,10 +435,38 @@ label[for="load-photo"] {
 .allergy-info .list-group-item:first-child {
 	margin-top: -1px;
 }
-form[name="add_sign"] input, form[name="add_sign"] button, form[name="add_cause"] input, form[name="add_cause"] button {
+form[name="add_sign"] input, form[name="add_sign"] button, form[name="add_cause"] input, form[name="add_cause"] button, .btn-allergy, form[name="add_allergy"] input {
 	border-radius: 0;
 	padding: .5rem 1rem;
 	margin-bottom: 0;
+}
+.note-editor {
+	border-radius: 0;
+	margin: 0 !important;
+}
+.note-editor.note-frame {
+	border: 1px solid #d5d5d5;
+	border-top: none;
+}
+.note-statusbar {
+	border-radius: 0;
+}
+.note-toolbar.card-header {
+	background-color: rgba(0, 0, 0, 0.05);
+	border-bottom: 1px solid rgba(0,0,0,.15);
+}
+.note-btn {
+	background: none;
+	border: none;
+}
+.note-editable {
+	padding: .5rem .75rem;
+}
+.note-editor.note-frame.fullscreen {
+	top: 93px;
+}
+.note-editor.note-frame.fullscreen .note-editable {
+	height: calc(100vh - 93px - 40px) !important;
 }
 @media screen and (max-width: 1199px)
 {
@@ -454,7 +483,7 @@ form[name="add_sign"] input, form[name="add_sign"] button, form[name="add_cause"
 @media screen and (max-width: 992px)
 {
 	html {
-		font-size: 75%;
+		font-size: 85%;
 	}
 	.container {
 		min-width: 100% !important;
@@ -497,8 +526,9 @@ form[name="add_sign"] input, form[name="add_sign"] button, form[name="add_cause"
 	.admin .admin-avatar {
 		float: left;
 		width: auto;
-		height: 31px;
+		height: 35px;
 		margin-bottom: 0;
+		margin-right: 10px;
 	}
 	.admin .admin-name {
 		font-size: 1.2rem;
@@ -511,8 +541,14 @@ form[name="add_sign"] input, form[name="add_sign"] button, form[name="add_cause"
 		margin-bottom: 2rem;
 	}
 	.last-changes .avatar {
-		width: 27px;
-		height: 27px;
+		width: 32px;
+		height: 32px;
 		margin-right: 10px;
+	}
+	.note-editor.note-frame.fullscreen {
+		top: 53px;
+	}
+	.note-editor.note-frame.fullscreen .note-editable {
+		height: calc(100vh - 53px - 40px) !important;
 	}
 }
