--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -620,6 +620,13 @@ form[name="login"] .btn {
 	font-weight: 700;
     line-height: 1.3;
 }
+.categories h4 {
+	text-transform: none;
+	font-weight: 700;
+}
+.categories-post span {
+	display: block;
+}
 @media (min-width: 992px) {
 	#login-button {
 		text-transform: uppercase;
