--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -503,6 +503,7 @@ body.modal-open .modal {
 .dropdown-menu.show {
 	display: block;
 	transform: scale(1, 1);
+	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
 }
 .dropdown-menu-right {
 	right: 0;
@@ -627,6 +628,75 @@ form[name="login"] .btn {
 .categories-post span {
 	display: block;
 }
+li.notification-panel {
+	line-height: 40px;
+}
+.notification-panel #notifications {
+	color: white;
+}
+.unread-badge {
+	position: absolute;
+	top: 0px;
+	right: -10px;
+	font-size: .7em;
+	background: red;
+	color: white;
+	width: 18px;
+	height: 18px;
+	text-align: center;
+	line-height: 18px;
+	border-radius: 50%;
+}
+.notification-panel .dropdown-menu {
+	width: 300px;
+	height: 300px;
+	right: -25px !important;
+	line-height: 1.2;
+	padding: 0;
+}
+.notification-panel .dropdown-menu.dropdown-menu-right.show:after {
+	border-bottom: 8px solid var(--ah-green);
+	border-left: 8px solid transparent;
+	border-right: 8px solid transparent;
+	bottom: unset;
+	top: -7px;
+	right: 23px;
+}
+.notification-panel .notifications-header {
+	background: var(--ah-green);
+	color: white;
+	font-weight: 700;
+	text-align: center;
+	padding: .5rem;
+	border-radius: .25rem .25rem 0 0;
+}
+.notification-panel .no-notifications {
+	font-weight: 700;
+	padding: 100px 2rem;
+	text-align: center;
+	color: gray;
+}
+.notification-panel .notifications-list {
+    overflow-y: auto;
+    height: calc(100% - 35px);
+	background: #f8f8f8;
+}
+.notification-panel .notifications-list a {
+	color: inherit;
+}
+.notification-panel .notifications-list .notification {
+	font-size: .9rem;
+	padding: .75rem;
+	background: rgba(223, 223, 223, 0.5);
+	border-bottom: 1px solid #dfdfdf;
+}
+.notification-panel .notifications-list .notification.unread {
+	background: #fff;
+	font-weight: 500;
+}
+.notification-panel .notifications-list .notification small {
+	font-size: 70%;
+}
 @media (min-width: 992px) {
 	#login-button {
 		text-transform: uppercase;
@@ -642,6 +712,17 @@ form[name="login"] .btn {
 	}
 	.navbar-nav li {
 		margin-left: 20px;
+	}
+	.dropdown-menu.dropdown-menu-right.show:after {
+		border-bottom: 8px solid #fff;
+		border-left: 8px solid transparent;
+		border-right: 8px solid transparent;
+		bottom: 79px;
+		content: "";
+		display: inline-block;
+		right: 30px;
+		margin-left: -8px;
+		position: absolute;
 	}
 }
 @media screen and (max-width: 991px) {
@@ -660,13 +741,15 @@ form[name="login"] .btn {
 		padding: 10px 0;
 		background-color: rgba(52, 58, 64, .9) !important;
 	}
+	.navbar .container {
+		max-width: 100%;
+	}
 	.navbar-expand-lg>.container, .navbar-expand-lg>.container-fluid {
 		padding-right: 15px;
 		padding-left: 15px;
 	}
 	.navbar-brand {
-		margin: 0;
-		padding-left: 0.75rem;
+		margin: 0 auto;
 	}
 	.navbar-nav {
 		margin-top: .5rem;
@@ -693,5 +776,36 @@ form[name="login"] .btn {
 	}
 	.last-allergies .card-title {
 		margin-top: 1rem;
+	}
+	.unread-badge {
+		top: -3px;
+		right: 2px;
+	}
+	.notification-panel {
+		padding: 0.25rem 0.75rem;
+	}
+	.notification-panel .dropdown-menu.dropdown-menu-right.show:after {
+		border-bottom: 8px solid var(--ah-green);
+		border-left: 8px solid transparent;
+		border-right: 8px solid transparent;
+		top: -6px;
+		content: "";
+		display: inline-block;
+		right: 26px;
+		margin-left: -8px;
+		position: absolute;
+	}
+	.notification-panel .dropdown-menu {
+		top: 60px;
+		left: 0px;
+		width: 100%;
+		position: fixed;
+		margin: 0;
+		border-radius: 0;
+		border: 0;
+		height: 300px;
+	}
+	.notification-panel .notifications-header {
+		border-radius: 0;
 	}
 }
