--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,24 +260,23 @@ h2.title {
 }
 .section {
 	padding: 70px 0;
-	margin-top: 5px;
-	margin-bottom: 5px;
 }
 .section:nth-of-type(even) {
 	background: #f2f2f2;
 }
 .section:first-child {
-  border-radius: 6px 6px 0 0;
+	border-radius: 6px 6px 0 0;
 }
 .section:last-child {
-  border-radius: 0 0 6px 6px;
+	border-radius: 0 0 6px 6px;
 }
 .section-image {
-  position: relative;
-  color: #fff !important;
+	position: relative;
+	color: #fff !important;
 	background-position: 50%;
-  background-size: cover;
-  background-attachment: fixed;
+	background-size: cover;
+	background-attachment: fixed;
+	transform: translateZ(0);
 }
 .info {
 	max-width: 360px;
@@ -349,13 +348,13 @@ h2.title {
 	margin: 1rem 0 .625rem 0;
 }
 b, strong {
-  font-weight: 700;
+	font-weight: 700;
 }
 .tip {
-  background: rgba(95, 207, 128, .15);
-  padding: 20px 15px;
-  line-height: 20px;
-}
+	background: rgba(95, 207, 128, .15);
+	padding: 20px 15px;
+	line-height: 20px;
+	}
 #echipa .description {
 	margin-bottom: 80px;
 }
@@ -702,6 +701,9 @@ li.notification-panel {
 .notification-panel .notifications-list .notification small {
 	font-size: 70%;
 }
+#statistici .col-md-6 {
+	padding: 1rem;
+}
 @media (min-width: 992px) {
 	#login-button {
 		text-transform: uppercase;
@@ -728,6 +730,22 @@ li.notification-panel {
 		right: 30px;
 		margin-left: -8px;
 		position: absolute;
+	}
+	#statistici .col-lg-4 {
+		padding: 2rem;
+		border: 1px solid hsla(0,0%,100%,.35);
+		border-top: 0;
+		border-left: 0;
+	}
+	#statistici .col-lg-4:nth-child(3), 
+	#statistici .col-lg-4:nth-child(6), 
+	#statistici .col-lg-4:nth-child(9) {
+		border-right: 0;
+	}
+	#statistici .col-lg-4:nth-child(7), 
+	#statistici .col-lg-4:nth-child(8), 
+	#statistici .col-lg-4:nth-child(9) {
+		border-bottom: 0;
 	}
 }
 @media screen and (max-width: 991px) {
